1.5.2
- changed station time out from inactivity to time passed

1.5.1
- Chinese translation
- stops deactivated by circuit condition or other scripts are not updated
- short circuited stops are skipped without reading circuit signals
- short circuit and deactivated error state take priority over duplicate name

1.5.0
- fixed request threshold icon to show ≤ instead of ≥
- added request priority control signal #22
- changed provider priority icon to be in line with request priority
- changed provider prioritization to provider priority > #existing deliveries from provider > amount #69
- fixed locked slots where subtracted from total train slots instead of per wagon

1.4.14
- added mod setting "Dispatcher Enabled"

1.4.13
- reverted base dependency  to 0.15.34 (stable)

1.4.12
- allowed negative provider priority again #64
- pushed base to 0.15.35

1.4.11
- thresholds are read as absolute values
- ignore negative control signals except thresholds

1.4.10
- improved circuit signal read performance
- pushed base to 0.15.34

1.4.9
- added localized mod title and mod description
- fixed possible integer overflow from mod settings
  - limit max values on stop and delivery timeout to 1 hour
  - limit other int settings to 2^32 -1

1.4.8
- added more details to debug log messages
- "no provider found" warning message changed from message level 2 to 1
- message level dropdown texts better reflect their behaviour

1.4.7
- fixed: distance check could prevent better matching trains from being picked
- fixed: error encoding train composition for trains longer than 31 carriages #55

1.4.6
- bumped required Factorio version to current stable
- fixed: Dispatcher picked trains closest to request stop instead of providing stop
- fixed: local wagon capacity lookup table could potentially cause desync

1.4.5
- removed left over debug message

1.4.4
- fixed: deliveries where not properly reserved
- performance optimizations

1.4.3
- fixed nil reference when no providers are available
